@@ -5,8 +5,11 @@ http://www.springsource.org
 Changes in version 3.2 M1
 -------------------------------------
 
-* fix issue with parsing invalid Content-Type or Accept headers
-
+* better handling on failure to parse invalid 'Content-Type' or 'Accept' headers
+* handle a controller method's return value based on the actual returned value (vs declared type)
+* fix issue with combining identical controller and method level request mapping paths
+* fix concurrency issue in AnnotationMethodHandlerExceptionResolver
+* fix case-sensitivity issue with some containers on access to 'Content-Disposition' header
 
 Changes in version 3.1.1 (2012-02-16)
 -------------------------------------
